# gapi/converter.go
@@ -26,10 +26,10 @@ func convertRoom(room db.Room) *pb.Room {
 		RoomNameBg:         room.RoomNameSr,
 		RoomShortdesSr:     room.RoomShortDesSr,
 		RoomShortdesEn:     room.RoomShortDesEn,
-		RoomShortdescBg:    room.RoomShortDesBg,
+		RoomShortdesBg:     room.RoomShortDesBg,
 		RoomDesSr:          room.RoomDescriptionSr,
 		RoomDesEn:          room.RoomDescriptionEn,
-		RoomDescBg:         room.RoomDescriptionBg,
+		RoomDesBg:          room.RoomDescriptionBg,
 		RoomPicturesFolder: room.RoomPicturesFolder,
 		RoomGuestNumber:    room.RoomGuestNumber,
 		RoomPriceEn:        room.RoomPriceEn,
